# xilinxget

./: .gitignore  README.md  main.py  pager.py  pyproject.toml
xilinxget/: behavior.py  main.py
