[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xilinxget"
description = "Automate the process of downloading tools from the AMD Xilinx website without the need of a GUI."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "pyvirtualdisplay",
    "selenium",
    "undetected-chromedriver",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Repository = "https://github.com/HamzaEzzRa/xilinxget.git"

[tool.setuptools]
packages = ["xilinxget"]

[tool.setuptools_scm]
version_file = "xilinxget/_version.py"

[project.scripts]
xilinxget = "xilinxget.main:main"
